RSL 2.11

- multiple fixes for new servers
- updated auto-update source
- update status text
- change server tasks to synchronous
- spelling fixes

~fenopy