@@ -36,12 +36,18 @@ namespace AndroidSideloader
         //Run rclone command
         public static ProcessOutput runRcloneCommand(string command, string bandwithLimit = "")
         {
-            if (!MainForm.HasInternet || MainForm.isOffline) return new ProcessOutput("", "No internet");
+            if (!MainForm.HasInternet || MainForm.isOffline)
+            {
+                return new ProcessOutput("", "No internet");
+            }
 
             ProcessOutput prcoutput = new ProcessOutput();
             //Rclone output is unicode, else it will show garbage instead of unicode characters
             rclone.StartInfo.StandardOutputEncoding = Encoding.UTF8;
             string originalCommand = command;
+
+            // global limiters
+            command += $" --http-no-head --transfers 2";
 
             //set bandwidth limit
             if (bandwithLimit.Length > 0)
@@ -105,8 +111,20 @@ namespace AndroidSideloader
                 prcoutput.Output = output;
                 prcoutput.Error = error;
             }
+
             if (!output.Contains("Game Name;Release Name;") && !output.Contains("package:") && !output.Contains(".meta"))
-            Logger.Log($"Rclone error: {error}\nRclone Output: {output}");
+            {
+                if (!string.IsNullOrWhiteSpace(error))
+                {
+                    Logger.Log($"Rclone error: {error}\n");
+                }
+
+                if (!string.IsNullOrWhiteSpace(output))
+                {
+                    Logger.Log($"Rclone Output: {output}");
+                }
+            }
+            
             if (output.Contains("There is not enough space"))
             {
                 FlexibleMessageBox.Show("There isn't enough space on your PC to properly install this game. Please have at least 2x the size of the game you are trying to download/install available on the drive where Rookie is installed.", "NOT ENOUGH SPACE");
